--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "dotenv": "^16.0.3",
@@ -23,6 +24,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
