--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "jest": "^29.5.0",
+    "mongodb-memory-server": "6.6.7",
     "prettier": "^2.8.4",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
