--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "build": "tsc",
     "start": "node ./dist",
-    "test": "jest --watch"
+    "test": "jest --watch --detectOpenHandles"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
