--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "build": "tsc",
     "start": "node ./dist",
-    "test": "jest --watch --detectOpenHandles"
+    "test": "jest --watchAll"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.61",
+    "@swc/jest": "^0.2.26",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/mongoose": "^5.11.97",
