--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "build": "tsc",
     "start": "node ./dist",
-    "test": "jest --watchAll --detectOpenHandles"
+    "test": "jest --detectOpenHandles"
   },
   "devDependencies": {
     "@swc/core": "^1.3.61",
